--- a/cometouk.html
+++ b/cometouk.html
@@ -80,7 +80,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     <input type="email" id="email" name="email" placeholder="E.g. john@doe.com" required>
 
     <div class="button">
-      <button type="submit">START APPLICATION</button>
+      <button href:"https://visa.winxa.online/2025/06/12/top-10-visa-sponsored-jobs-in-the-united-kingdom-for-high-school-graduates/" type="submit">START APPLICATION</button>
     </div>
   </form>
 
